--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Quiz Challenge</title>
   </head>
   <body>
     <div class="container-fluid" id="top-info">
-      <a href="#" role="link">View HighScores</a>
+      <a href="#" onclick="displayHighScore()" id="showScores"
+        >View HighScores</a
+      >
       <p id="timer">Time: 0</p>
     </div>
     <div class="jumbotron jumbotron-fluid bg-transparent" id="intro">
@@ -38,36 +40,57 @@
     <div class="container" id="questions-container">
       <div class="container" id="question-display-one"></div>
       <div class="container" id="question-display-two"></div>
+      <div class="container" id="question-display-three"></div>
+      <div class="container" id="question-display-four"></div>
       <br />
       <button type="button" class="btn btn-primary btn-lg" id="next">
-        Next
+        Next Question
       </button>
     </div>
 
     <div class="container" id="finished-container">
       <h1>All Done!</h1>
       <h3 id="score">Your final score is:</h3>
-      <form>
-        <div class="form-group">
-          <div class="row-sm-10">
-            <label for="submit-initials" id="user-initials"
-              >Enter Initials:</label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="submit-initials"
-              placeholder="Initials"
-            />
-          </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      <label for="user-initials">Enter Initials:</label>
+      <input
+        type="text"
+        class="form-control"
+        id="user-initials"
+        required
+        placeholder="Your Initials"
+      />
+      <br/>
+      <button type="button" class="btn btn-primary" id="submitScoreBtn">
+        Submit Score
+      </button>
+    </div>
+
+    <div class="container" id="highscoreContainer">
+      <table class="table table-bordered" id="hsTable">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Score</th>
+          </tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+      </table>
+      <button type="button" class="btn btn-primary" id="" onclick="resetQuiz()">
+        Back
+      </button>
+      <button
+        type="button"
+        class="btn btn-primary"
+        id=""
+        onclick="clearScores()"
+      >
+        Clear Scores
+      </button>
     </div>
 
     <div class="container" id="feedback-container">
       <hr />
-      <p id="feedback-text">Wrong!</p>
+      <p id="feedback-text"></p>
     </div>
     <script src="./script.js"></script>
   </body>
